--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
+		"axios": "^0.21.1",
+		"moment": "^2.29.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "^1.1.5"
+		"react-scripts": "^1.1.5",
+		"redux": "^4.1.0",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
