--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "*",
 		"axios": "^0.21.1",
 		"moment": "^2.29.1",
 		"prop-types": "^15.7.2",
